# projekt-skriptorium-cloud

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
frontend/: app.js  index.html  style.css
src/: auth.rs  db.rs  main.rs  models.rs
