[package]
name = "scriptorium-cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bcrypt = "0.19.1"
base64 = "0.22.1"
tower-http = { version = "0.6.11", features = ["fs"] }
